fix admin products not aligned

--- a/page/admin/admin.css
+++ b/page/admin/admin.css
@@ -15,6 +15,7 @@
 }
 
 #products-container {
+  max-width: 50vw;
   border: 2px solid var(--secondary);
   border-radius: 4px;
 }
